--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id("androidx.navigation.safeargs")
+    id 'kotlin-kapt'
 }
 
 android {
@@ -39,6 +40,7 @@ android {
 dependencies {
     def nav_version = "2.7.5"
     def lifecycle_version = "2.4.0"
+    def room_version = "2.6.0"
 
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
@@ -61,6 +63,7 @@ dependencies {
 
     //ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
 
     //Coroutine
@@ -71,5 +74,13 @@ dependencies {
     implementation "androidx.media3:media3-exoplayer-dash:1.2.0"
     implementation "androidx.media3:media3-ui:1.2.0"
 
+    //Youtube player
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.1.0'
+
+    //Room
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+
+    kapt "androidx.room:room-compiler:$room_version"
 }
